--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.5-Alpha, 2018-10-21: Alan 3.0beta6
+v0.7.6-Alpha, 2018-10-22: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -76,8 +76,6 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN dare.                     ---> give
   CAN dire.                     ---> 'say'
   CAN dire_a.                   ---> say_to
-  CAN dire_no.                  ---> 'no'
-  CAN dire_sì.                  ---> yes
   CAN domandare.                ---> ask (+ enquire, inquire, interrogate)
   CAN domandare_chi_sono_io.    ---> who_am_i
   CAN domandare_chi_è.          ---> who_is
@@ -131,6 +129,8 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN ringraziamenti.           ---> credits (+ acknowledgments, author, copyright)
   CAN riparare.                 ---> fix (+ mend, repair)
   CAN rispondere.               ---> answer (+ reply)
+  CAN rispondere_No.            ---> 'no'
+  CAN rispondere_Sì.            ---> yes
   CAN rompere.                  ---> break        (+ destroy)
   CAN rompere_con.              ---> break_with
   CAN salvare_partita.          ---> save
