Translate Script Verbs
Translate meta verbs of the script group:

- `'script'`   to `trascrizione`
- `script_on`  to `trascrizione_on`
- `script_off` to `trascrizione_off`

And their restriction attributes:

- `'script'`   to `trascrivere`
- `script_on`  to `trascrivere_on`
- `script_off` to `trascrivere_off`

Add tests for script commands (failed: creates empty log files).
Also add tests for all other out-of-game commands -- in order to test
`carica_partita` verb, a `.sav` file had to be included in project.

`BUILD_DOCS.bat`: add `reproducible` attribute to disable last-updated
date in footer, so it prevents Git seeing spurious changes every time the
script is run.

--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.6-Alpha, 2018-10-22: Alan 3.0beta6
+v0.7.7-Alpha, 2018-10-22: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -158,6 +158,9 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN toccare.                  ---> touch (+ feel)
   CAN toccare_con.              ---> touch_with
   CAN togliersi_indumento.      ---> remove
+  CAN trascrivere.              ---> 'script'
+  CAN trascrivere_off.          ---> script_off
+  CAN trascrivere_on.           ---> script_on
   CAN trovare.                  ---> find         (+ locate)
   CAN tuffarsi.                 ---> dive
   CAN tuffarsi_in.              ---> dive_in
@@ -281,9 +284,6 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
   CAN put_under.
   CAN rub.
   CAN 'score'.
-  CAN 'script'.
-  CAN script_on.
-  CAN script_off.
   CAN search.
   CAN shake.
   CAN shoot.       -- (at)
