--- a/alanlib_ita/lib_definizioni.asciidoc
+++ b/alanlib_ita/lib_definizioni.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Definizioni
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.7-Alpha, 2018-10-22: Alan 3.0beta6
+v0.7.8-Alpha, 2018-10-24: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_definitions.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -168,6 +168,7 @@ Questo è l'elenco degli attributi di restrizioni verbali sinora tradotti:
   CAN uccidere_con.             ---> kill_with
   CAN usare.                    ---> 'use'
   CAN usare_con.                ---> use_with
+  CAN vedere_punteggio.         ---> 'score'
   CAN vendere.                  ---> sell
   CAN versare.                  ---> pour
   CAN versare_in.               ---> pour_in
@@ -283,7 +284,6 @@ Questo è l'elenco degli attributi verbali non ancora tradotti:
   CAN put_on.
   CAN put_under.
   CAN rub.
-  CAN 'score'.
   CAN search.
   CAN shake.
   CAN shoot.       -- (at)
