--- a/alanlib_ita/lib_verbi.asciidoc
+++ b/alanlib_ita/lib_verbi.asciidoc
@@ -1,6 +1,6 @@
 = Alan StdLib Italian: Verbi
 Tristano Ajmone <tajmone@gmail.com>
-v0.7.9-Alpha, 2018-10-22: Alan 3.0beta6
+v0.7.10-Alpha, 2018-10-24: Alan 3.0beta6
 =============================================================================
 Adattamento italiano del modulo `lib_verbs.i` della
 _ALAN Standard Library_ v2.1, (C) Anssi Räisänen, Artistic License 2.1.
@@ -76,6 +76,7 @@ Altresì noti come _comandi extradiegetici_.
 | trascrizione       |                              | trascrizione                     | {X} | 0 |     |
 | trascrizione_off   | trascrizione off             | trascrizione disattivata         | {X} | 0 |     |
 | trascrizione_on    | trascrizione on              | trascrizione attivata            | {X} | 0 |     |
+| vedi_punteggio     |                              | punteggio                        | {X} | 0 |     |
 |=============================================================================================================
 
 // end::tabella_comandi_partita[]
@@ -260,7 +261,6 @@ italiano del modulo dei verbi.
 | put_on             |                                    | put (obj) on (surface)            | 2 | {x}
 | put_under          |                                    | put (obj) under (bulk)            | 2 | {x}
 | rub                |                                    | rub (obj)                         | 1 | {x}
-| score              |                                    | score                             | 0 |
 | search             |                                    | search (obj)                      | 1 | {x}
 | shake              |                                    | shake (obj)                       | 1 | {x}
 | shoot (at)         |                                    | shoot at (target)                 | 1 |
